<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_events"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_myprojects"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/myprojects" />
        <!--<item-->
            <!--android:id="@+id/nav_reports"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/reports" />-->
    </group>

    <item android:title=" ">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
