<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:fontFamily="serif"
        android:text="@string/results"
        android:gravity="center"
        android:background="@drawable/mybutton"
        />

    <TableLayout
        android:layout_marginTop="10dp"
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/table_row1"
            android:padding="10dp"
            android:textSize="10sp"
            >

            <TextView
                android:id="@+id/day_record"
                android:fontFamily="serif"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="#000"
                android:text="@string/daytime"/>
            <TextView
                android:id="@+id/tag_record"
                android:textColor="#000"
                android:fontFamily="serif"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/tags"/>
            <TextView
                android:textColor="#000"
                android:id="@+id/inst_name"
                android:fontFamily="serif"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/ins_name"/>
            <TextView
                android:textColor="#000"
                android:id="@+id/proj_name_record"
                android:fontFamily="serif"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/proj_name_record"/>

        </TableRow>
        <View
            android:layout_height="3dip"
            android:layout_width="match_parent"
            android:background="@color/colorAccent"/>
    </TableLayout>
</LinearLayout>
