<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hd.mersad.Profile"
    tools:showIn="@layout/app_bar_profile"
    android:background="@mipmap/bodybg"
    >


    <ScrollView
            android:id="@+id/show_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                    android:id="@+id/show_profile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/mylinearlayout"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingBottom="30dp"
                    android:paddingTop="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:weightSum="1">



                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/signup_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:inputType="textAutoComplete"
                            android:maxLines="1"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"

                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/signup_email"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:hint="@string/prompt_email"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            />



                        <!--android:imeActionId="@+id/login"-->
                        <!--android:imeActionLabel="@string/prompt_password"-->
                        <!--android:imeOptions="actionUnspecified"-->

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/signup_password"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:hint="@string/prompt_password"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            />



                        <!--android:imeActionId="@+id/login"-->
                        <!--android:imeActionLabel="@string/prompt_password"-->
                        <!--android:imeOptions="actionUnspecified"-->

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/signup_second_password"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:hint="@string/prompt_password_again"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            />



                        <!--android:imeActionId="@+id/login"-->
                        <!--android:imeActionLabel="@string/prompt_password"-->
                        <!--android:imeOptions="actionUnspecified"-->

                    </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/signup_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/signup_city"
                            android:inputType="text"
                            android:minLines="1"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/signup_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_state"
                            android:inputType="text"
                            android:minLines="1"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/signup_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_address"
                            android:inputType="textMultiLine"
                            android:lines="3"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        />
                    <!--android:imeActionId="@+id/login"-->
                    <!--android:imeActionLabel="@string/prompt_password"-->
                    <!--android:imeOptions="actionUnspecified"-->

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/postalCode"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:hint="@string/postalcode"
                        android:maxLines="1"
                        android:inputType="number"
                        android:singleLine="true"
                        />
                    <!--android:imeActionId="@+id/login"-->
                    <!--android:imeActionLabel="@string/prompt_password"-->
                    <!--android:imeOptions="actionUnspecified"-->

                </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >
                        <Switch
                            android:id="@+id/benefactor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/signup_benefactor"
                            android:textAlignment="center"
                            />
                        <Switch
                            android:id="@+id/needing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/signup_needing"
                            android:textAlignment="center"
                            />
                    </LinearLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/signup_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:maxLines="1"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"

                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/signup_familyname"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:hint="@string/last_name"
                            android:maxLines="1"
                            android:singleLine="true"
                            />
                        <!--android:imeActionId="@+id/login"-->
                        <!--android:imeActionLabel="@string/prompt_password"-->
                        <!--android:imeOptions="actionUnspecified"-->

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/signup_age"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:inputType="number"
                            android:hint="@string/age"
                            android:maxLines="1"
                            android:singleLine="true"
                            />
                        <!--android:imeActionId="@+id/login"-->
                        <!--android:imeActionLabel="@string/prompt_password"-->
                        <!--android:imeOptions="actionUnspecified"-->

                    </android.support.design.widget.TextInputLayout>








                <ToggleButton
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textOff="@string/male"
                        android:textOn="@string/female"
                        android:background="@color/colorAccent"
                        android:shadowColor="@color/ButtonColor"
                        android:layout_gravity="center"
                        android:id="@+id/gender_button"
                        />


                <Button
                    android:id="@+id/profile_change_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="16dp"
                    android:text="@string/profile_changes"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/mybutton"
                    android:layout_weight="9.66"

                    />


                </LinearLayout>




        </ScrollView>



</RelativeLayout>
