<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_events"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hd.mersad.Events"
    tools:showIn="@layout/app_bar_events"
    android:background="@mipmap/bodybg"
    >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="80dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:fontFamily="serif"
            android:text="@string/events"
            android:gravity="center"
            android:background="@drawable/mybutton"
            />

        <TableLayout
            android:layout_marginTop="10dp"
            android:id="@+id/table_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/table_row1"
                android:padding="10dp"
                android:textSize="10sp"
                >

                <TextView
                    android:textColor="#000"
                    android:id="@+id/event_desc"
                    android:fontFamily="serif"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/descriptions"/>


                <TextView
                    android:id="@+id/event_date_record"
                    android:textColor="#000"
                    android:fontFamily="serif"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/date"/>
                <TextView
                    android:id="@+id/event_proj_name_record"
                    android:fontFamily="serif"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:text="@string/proj_name_record"/>

            </TableRow>
            <View
                android:layout_height="3dip"
                android:layout_width="match_parent"
                android:background="@color/colorAccent"/>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>
