<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.hd.mersad.LoginActivity"
    android:background="@mipmap/bodybg">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->


    <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_vertical"

            android:visibility="gone"
            />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:weightSum="1"


                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:id="@+id/mersadLogo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/mylinearlayout"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingBottom="30dp"
                    android:paddingTop="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:weightSum="1"

                    >



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/signup_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"

                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/signup_password"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:hint="@string/prompt_password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:singleLine="true"
                         />
                        <!--android:imeActionId="@+id/login"-->
                        <!--android:imeActionLabel="@string/prompt_password"-->
                        <!--android:imeOptions="actionUnspecified"-->

                </android.support.design.widget.TextInputLayout>



                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/mybutton"
                    android:layout_weight="9.66"

                    />
                </LinearLayout>
                <Button
                    android:id="@+id/sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold"
                    android:layout_margin="40dp"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/secondarybuttons"
                    android:layout_weight="9.66"
                    android:onClick="signUp"
                    android:layout_marginLeft="0dp" />

            </LinearLayout>
        </ScrollView>
</LinearLayout>
